added markup - buttons + displays

--- a/3.Counter/index.html
+++ b/3.Counter/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
      
-
+<section id="counter">
+     <div class="counterDisplay">0</div>
+     <div class="counterControls">
+          <button id="increase-control"></button>
+          <button id="decrease-control"></button>
+     </div>
+</section>
 
 
 
