added js eventListners to the increase buttons and decrease buttons

--- a/3.Counter/index.html
+++ b/3.Counter/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Counter | Mongezi Mncube</title>
-     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-     
-<section id="counter">
-     <div class="counterDisplay">0</div>
-     <div class="counterControls">
-          <button id="increase-control"></button>
-          <button id="decrease-control"></button>
-     </div>
-</section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Counter | Mongezi Mncube</title>
+    <link rel="stylesheet" href="counter.css" />
+  </head>
+  <body>
+    <div id="counterDisplay">0</div>
+    <section id="counter">
+      <div id="counterControls">
+        <button id="increase-control">+</button>
+        <button id="decrease-control">-</button>
+      </div>
+    </section>
 
-
-
-     <script src="./app.js"></script>
-</body>
+    <script src="counter.js"></script>
+  </body>
 </html>
